--- a/assets/sass/components/_home-about-item.scss
+++ b/assets/sass/components/_home-about-item.scss
@@ -11,7 +11,7 @@
   }
 
   .drop-down-menu-title {
-    font-size: 1.25em;
+    font-size: 1em;
     text-transform: uppercase;
 
     a { color: $white; }
